syntax = "proto3";

package pt_com;

import "google/protobuf/any.proto";

enum com_pid {
	COM_NONE = 0;
	COM_REGISTER_NODE = 1;
}

enum node_type {
	NODE_UNKNOW = 0;
	NODE_LOGIN_SERVER = 1;
	NODE_ROOM_SERVER = 2;
}

message room_item {
	uint64 roomid = 1;
	string roomname = 2;
	uint32 roomkind = 3;
}

message room_user_item {
	uint64 userid = 1;
	string name = 2;
	uint64 gold = 3;
	uint32 tableid = 4;
	uint32 chairid = 5;
}

message room_table_item {
	uint32 tableid = 1;
	uint32 capacity = 2;
}

message c2s_register_node {
	uint32 nodetype = 1;
	google.protobuf.Any extra = 2;
}

message s2c_register_node_result {
	int32 code = 1;
	uint32 nodetype = 2;
	google.protobuf.Any extra = 3;
}